[project]
name = "nonebot-plugin-blacklist"
version = "0.1.0"
description = "Blacklist in NoneBot2"
authors = [
    {name = "月ヶ瀬", email = ""},
]
license-expression = "MIT"
dependencies = ["nonebot2>=2.0.0b3", "nonebot-adapter-onebot>=2.0.0b1"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tkgs0/nonebot-plugin-blacklist"
Repository = "https://github.com/tkgs0/nonebot-plugin-blacklist"

[build-system]
requires = ["pdm-pep621>=0.4.0"]
build-backend = "pdm.pep621.api"

